@@ -234,6 +234,7 @@ typedef unsigned long HREQUEST;
 #define RCC_NOT_IMPLEMENTED         ((DWORD)28)
 #define RCC_INVALID_TRAP_ID         ((DWORD)29)
 #define RCC_DCI_NOT_SUPPORTED       ((DWORD)30)
+#define RCC_VERSION_MISMATCH        ((DWORD)31)
 
 
 //
@@ -945,6 +946,8 @@ DWORD LIBNXCL_EXPORTABLE NXCLockTrapCfg(void);
 DWORD LIBNXCL_EXPORTABLE NXCUnlockTrapCfg(void);
 DWORD LIBNXCL_EXPORTABLE NXCLoadTrapCfg(DWORD *pdwNumTraps, NXC_TRAP_CFG_ENTRY **ppTrapList);
 void LIBNXCL_EXPORTABLE NXCDestroyTrapList(DWORD dwNumTraps, NXC_TRAP_CFG_ENTRY *pTrapList);
+DWORD LIBNXCL_EXPORTABLE NXCCreateTrap(DWORD *pdwTrapId);
+DWORD LIBNXCL_EXPORTABLE NXCModifyTrap(NXC_TRAP_CFG_ENTRY *pTrap);
 DWORD LIBNXCL_EXPORTABLE NXCDeleteTrap(DWORD dwTrapId);
 
 #ifdef __cplusplus
